apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__upgrade__test__add_field-2.snap
---
source: apollo-router/src/configuration/upgrade.rs
assertion_line: 375
expression: "apply_migration(&source_doc(),\n&Migration::builder().action(Action::Add\n{\n    path: \"obj\".to_string(), name: \"field3\".to_string(), value: 42.into()\n}).description(\"add field3\").build(),).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field1": 1,
    "field2": 2,
    "field3": 42
  },
  "arr": [
    "v1",
    "v2"
  ]
}
