apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__upgrade__test__copy_field.snap
---
source: apollo-router/src/configuration/upgrade.rs
assertion_line: 443
expression: "apply_migration(&source_doc(),\n&Migration::builder().action(Action::Copy\n{\n    from: \"obj.field1\".to_string(), to: \"new.obj.field1\".to_string()\n}).description(\"copy field1\").build(),).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field1": 1,
    "field2": 2
  },
  "arr": [
    "v1",
    "v2"
  ],
  "new": {
    "obj": {
      "field1": 1
    }
  }
}
