apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__upgrade__test__move_array_element.snap
---
source: apollo-router/src/configuration/upgrade.rs
assertion_line: 426
expression: "apply_migration(&source_doc(),\n&Migration::builder().action(Action::Move\n{\n    from: \"arr[0]\".to_string(), to: \"new.arr[0]\".to_string()\n}).description(\"move arr[0]\").build(),).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field1": 1,
    "field2": 2
  },
  "arr": [
    "v2"
  ],
  "new": {
    "arr": [
      "v1"
    ]
  }
}
